--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ numpy==1.21.6
 pandas==1.3.5
 pydantic==1.10.5
 PyYAML==6.0
-rasterio==1.2.10
+rasterio>=1.2.10
 requests_futures==1.0.0
 rioxarray==0.9.1
 scikit_learn==1.0.2
