--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -45,5 +45,5 @@ jobs:
           # Upload entire repository
           publish_branch: gh-pages
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: 'docs/build'
+          publish_dir: 'docs/build/html'
           force_orphan: true
